# mask_attention_transformer

./: .gitignore  README.md  compile.sh  primer.md  setup.py  test_attn.py
blas_examples/: CMakeLists.txt  README.md  cpu_blas_examples.cpp  install_and_run.sh
csrc/: CmakeLists.txt  mask_attention.cpp  mask_attention.h  test.py
libtorch_example/: CmakeLists.txt  README.md  attn.cpp  index_info.h  install_and_run.sh
mask_attention/: __init__.py  attention.py
